# strc

./: .env.example  .gitignore  AKB_CRAWLER_OPTIMIZATION.md  AKB_ENHANCEMENTS.md  AKB_PARSER_ENHANCEMENT.md  AUTO_ENRICHMENT.md  DATA_QUALITY_REPORT.md  ENRICHMENT_COMPLETE.md  ENRICHMENT_STATE_PERSISTENCE.md  FINANZEN_CRAWLER.md  INSTALL.md  JSON_ERROR_FIX.md  LEONTEQ_API_SETUP.md  LEONTEQ_FILTERING.md  MISSING_DATA_SOLUTION.md  MONITORING.md  Makefile  PARSER_ISSUES.md  PDF_ENRICHMENT.md  PDF_ENRICHMENT_FINAL.md  PDF_ENRICHMENT_UI.md  PRODUCT_FILTERS.md  QUICKSTART.md  QUICKSTART_COUPONS.md  README.md  STATISTICS_PAGE.md  open-app.sh  pyproject.toml  start.sh
Structured Products.app/Contents/: Info.plist
backend/app/: main.py  settings.py
backend/tests/: test_golden.py  test_merge.py  test_utils.py
core/models/: __init__.py  fields.py  normalized.py
core/parsing/: __init__.py  base.py  generic_regex.py  generic_tables.py  issuer_lukb_style.py
core/sources/: __init__.py  akb.py  akb_finanzportal.py  finanzen.py  leonteq.py  leonteq_api.py  leonteq_api.py.backup  pdf_termsheet.py  swissquote.py  swissquote_scanner.py  yahoo.py
core/utils/: __init__.py  cache.py  confidence.py  dates.py  hashing.py  merge.py  text.py  (+2 more)
frontend/: index.html  package-lock.json  package.json
icon/: README.md
scripts/: check_invalid_json.py  check_leonteq_login.py  check_missing_data.py  dev.sh  enrich_finanzen.py  enrich_leonteq_pdfs.py  fix_invalid_json.py  get_leonteq_token.py  monitor_crawl.py  reprocess_akb_products.py  spa.py  test_leonteq_api.py  view_products.py
(+34 files in other folders)
