[tool.poetry]
name = "structured-products-analysis"
version = "0.1.0"
description = "Local-first structured products ingestion and analysis"
authors = ["Codex <codex@local>"]
readme = "README.md"
packages = [{include = "backend"}, {include = "core"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.0"
uvicorn = {version = "^0.30.6", extras = ["standard"]}
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
pdfplumber = "^0.11.4"
python-multipart = "^0.0.9"
httpx = "^0.27.2"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
playwright = "^1.47.0"
yfinance = "^0.2.43"
cryptography = "^43.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
